Fixed boxed shadow - found a positioning issue on mobile regarding the 'nav-links' and 'nav-icons' that has also been fixed

--- a/app/styles/_header-footer.scss
+++ b/app/styles/_header-footer.scss
@@ -25,7 +25,9 @@
 		.nav-links {
 			list-style-type: none;
 			display: inline-flex;
-
+			@media (max-width: $lrg-scr) {
+				padding: 0;
+			}
 			li {
 				padding: 1rem;
 				a {
@@ -44,6 +46,9 @@
 			list-style: none;
 			display: inline-flex;
 			vertical-align: middle;
+			@media (max-width: $lrg-scr) {
+				padding: .05rem;
+			}
 			li {
 				padding-right: 1.5rem;
 				@media (min-width: $lrg-scr) {
